# z-project

./: CMakeLists.txt  Kconfig  esp32_devkitc_wroom.overlay  prj.conf  zephyr-linux.code-workspace
include/: my_btn.h  my_fifo.h  my_led.h  my_linked_list.h  my_msgq.h
src/: main.c  my_btn.c  my_fifo.c  my_led.c  my_led.h  my_linked_list.c  my_linked_list.h  my_msgq.c  my_msgq.h  oldMain.c
